<?xml version="1.0"?>
<package format="2">
    <name>pjmsg_mcap_wrapper</name>
    <version>0.1.2</version>
    <description>Inner telemetry collector</description>
    <maintainer email="alexander@sherikov.net">Alexander Sherikov</maintainer>
    <author email="alexander@sherikov.net">Alexander Sherikov</author>
    <license>Apache 2.0</license>

    <buildtool_depend>cmake</buildtool_depend>
    <depend>libzstd-dev</depend>

    <export>
        <build_type>cmake</build_type>
    </export>
</package>
